[REFACTOR] Remove redundancy & handle some exceptions